--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,6 +1,3 @@
-
-/*-------------------------------------*/
-/* Global styles */
 * {
     box-sizing: border-box !important;
 }
@@ -21,9 +18,6 @@ p {
   margin: 0 !important;
 }
 
-/*-------------------------------------*/
-/* general */
-/* colours */
 :root {
   --colour1: #5A554E;
   --colour2: #EBE9E4;
@@ -31,7 +25,6 @@ p {
   --colour4: #6f544e;
 }
 
-/* All buttons */
 .btn-primary:hover, .btn-primary:active {
   background: var(--colour4);
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset !important;
@@ -48,3 +41,7 @@ button a:active {
   color: var(--colour3) !important;
 }
   
+.card {
+  padding: 10px !important;
+  border: none !important;
+}
