remove nested css

--- a/src/style/ServiceOption.css
+++ b/src/style/ServiceOption.css
@@ -14,10 +14,8 @@
     width: auto;
 }
 
-.img-link:hover {
-    .card-img {
+.img-link:hover .card-img {
         filter: none !important;
-    }
 }
 
 .card-img-overlay {
