--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -19,3 +19,9 @@ svg {
     --bs-btn-active-bg: var(--colour2) !important;
     --bs-btn-active-border-color: var(--colour2) !important;
 }
+
+.contactContent {
+    margin: 50px;
+    width: 90% !important;
+    min-height: 65vh;
+}
