--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -14,3 +14,7 @@
     --bs-btn-active-bg: var(--colour2) !important;
     --bs-btn-active-border-color: var(--colour2) !important;
 }
+
+.allContent {
+    width: 95% !important;
+}
